kubernetes/bootstrap/apps/network/traefik/app/https-redirect.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: network
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-all-to-https
  namespace: network
spec:
  entryPoints: [web] # HTTP entrypoint
  routes:
    - match: HostRegexp(`{host:.+}`)
      kind: Rule
      priority: 1 # <- lower than the internal route
      middlewares:
        - name: https-redirect
      services:
        # no real backend; this triggers the redirect
        - kind: TraefikService
          name: noop@internal
